--- a/Codes/Exercise1/README
+++ b/Codes/Exercise1/README
@@ -1,1 +1,1 @@
-ISSUE: to Bode plots need to be corrected by a factor *20, because in the current implementation they are in log-log scale.
+No issue to report
